<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="cit.edu.pawfectmatch.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="cit.edu.pawfectmatch.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="cit.edu.pawfectmatch.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_pets"
        android:name="cit.edu.pawfectmatch.ui.slideshow.PetFragment"
        android:label="My Pets"
        tools:layout="@layout/fragment_pet">
        <action
            android:id="@+id/action_nav_pets_to_nav_addPetFragment"
            app:destination="@id/nav_addPetFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="cit.edu.pawfectmatch.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings"/>

<!--    PETS-->
    <fragment
        android:id="@+id/nav_addPetFragment"
        android:name="cit.edu.pawfectmatch.ui.slideshow.AddPetFragment"
        tools:layout="@layout/fragment_add_pet" />

</navigation>