<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.PawfectMatch">

<!--    <ImageView-->
<!--        android:id="@+id/nav_profile_pic"-->
<!--        android:layout_width="64dp"-->
<!--        android:layout_height="64dp"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:contentDescription="@string/nav_header_desc"-->
<!--        android:paddingTop="@dimen/nav_header_vertical_spacing"-->
<!--        app:srcCompat="@drawable/defaultprofile" />-->

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/nav_profile_pic"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/defaultprofile"
        android:layout_gravity="center"
        app:shapeAppearanceOverlay="@style/CircleImageView"
        />

    <TextView
        android:id="@+id/nav_header_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nav_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>